# api/server.go
@@ -6,9 +6,9 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/gin-gonic/gin/binding"
 	"github.com/go-playground/validator/v10"
-	db "github.com/sauravsinghs/simplebank/db/sqlc"
-	"github.com/sauravsinghs/simplebank/token"
-	"github.com/sauravsinghs/simplebank/util"
+	db "github.com/sauravsinghs/secure-n-banked/db/sqlc"
+	"github.com/sauravsinghs/secure-n-banked/token"
+	"github.com/sauravsinghs/secure-n-banked/util"
 )
 
 // Server serves HTTP requests for our banking service.
